XMLExper/m12/m12_293_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::FirstChildElement(const char*) const’:
tinyxml2.cpp:1039:98: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
 1039 |     for( const XMLNode* node = _firstChild; node; /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(node) = node->_next ) {
      |                                                                                                  ^
diff: tinyxml2.S: No such file or directory
